# rave_urdf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  raveurdf.cpp  test_plugin.py  testplugin.py
include/raveurdf/: raveurdf.h  utils.h
robots/: panda.urdf
robots/meshes/collision/: convex_decomp_log.txt
robots/meshes/visual/: convert_to_osg.sh  y_up_axis.sh
robots/meshes/visual/dae/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
robots/meshes/visual/osg/: finger.osg  hand.osg  link1.osg  link2.osg  link3.osg  link4.osg  link7.osg  schmalz_sucker.osg
robots/meshes/visual/stl/: finger_y.stl  hand_y.stl  link0_y.stl  link1_y.stl  link2_y.stl  link3_y.stl  link4_y.stl  link5_y.stl  link6_y.stl  link7_y.stl  schmalz_sucker.stl
scenes/: myscene.env.xml
src/: CMakeLists.txt  raveurdf.cpp
